--- a/index.html
+++ b/index.html
@@ -36,12 +36,12 @@
     <div class="container">
         <div class="main">
             <div class="box">
-                <div class="card"> <img src="img/aveji.png" alt=""></div>
-                <p>aveji</p>
+                <div class="card"> <a href="https://alinanmv.github.io/aveji/"> <img src="img/aveji.png" alt="" id="card"></a></div>
+                <p id="card-desc">aveji</p>
             </div>
             <div class="box">
-                <div class="card"> <img src="img/tindog.png" alt=""></div>
-                <p>tindog</p>
+                <div class="card"><a href="https://alinanmv.github.io/TinDog/"><img src="img/tindog.png" alt="" id="card"></a> </div>
+                <p id="card-desc">tindog</p>
             </div>
         </div>
     </div>
@@ -56,10 +56,9 @@
                    <div class="info">
                        <h3>Alina Numanova</h3>
                        <p>As a passionate Front-End Developer, I have a deep appreciation for the art of interface design. My expertise in HTML, CSS, and JavaScript allows me to create visually stunning and highly functional web experiences. Currently, I work on diverse projects for clients around the globe, all from my home office in the vibrant city of Tashkent, Uzbekistan. </p>
-                       <div class="links">
-                           <p>INSTAGRAM</p>
-                           <p>GITHUB</p>
-                           <P>EMAIL</P>
+                      <div class="links">
+                           <a href="https://www.instagram.com/alina.nmv?igsh=ZW5rejh4MWQ3eW1h&utm_source=qr"><p>INSTAGRAM</p></a>
+                          <a href="https://github.com/alinanmv"> <p>GITHUB</p></a>
                        </div>
                    </div>
             </div>
@@ -105,10 +104,10 @@
     <footer class="footer">
         <div class="contact">
             <h3>contact me</h3>
-            <div class="apps">
-                <img src="img/instagram.svg" alt="">
-                <img src="img/github.svg" alt="">
-                <img src="img/linkedin.svg" alt="">
+             <div class="apps">
+             <a href="https://www.instagram.com/alina.nmv?igsh=ZW5rejh4MWQ3eW1h&utm_source=qr"><img src="img/instagram.svg" alt=""></a>   
+             <a href="https://github.com/alinanmv"><img src="img/github.svg" alt=""></a>   
+             <a href="https://www.linkedin.com/in/alina-numanova-7302a4328?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app"> <img src="img/linkedin.svg" alt=""></a>  
             </div>
             <p>order of service</p>
         </div>
